update docs title

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-title: Pediatric Brain Tumor Segmenter
+title: Harmonization Across Imaging Locations(HAIL)
 logo: /assets/img/CN_Vrt_RGB_HiRes_Lg.png
 description: 
 show_downloads: false
