--- a/.github/workflows/build-doc.yml
+++ b/.github/workflows/build-doc.yml
@@ -20,27 +20,14 @@ jobs:
         with:
           python-version: 3.8.15
       
-      - name: Poetry ✅
-        uses: snok/install-poetry@v1
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-          installer-parallel: true
-      
-      - name: Load cached venv ❓
-        id: cached-poetry-dependencies
-        uses: actions/cache@v3
-        with:
-          path: .venv
-          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
-      
       - name: Install dependencies ✅
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-        run: poetry install --no-interaction --no-root
+        run: pip install -r code/requirements.txt
       
       - name: Build Doc ✅
         run: |
-          poetry run pdoc --html -o build code/hail
+          pip install pdoc
+          pdoc -o build code/hail
       
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
