--- a/.github/workflows/build-doc.yml
+++ b/.github/workflows/build-doc.yml
@@ -27,10 +27,15 @@ jobs:
       - name: Build Doc ✅
         run: |
           pip install pdoc
-          PYTHONPATH=code/hail pdoc -o build ./code/hail
+          PYTHONPATH=code/hail pdoc -o docs ./code/hail
+          rm -rf docs/index.html
       
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: build
-          token: ${{ secrets.GH_TOKEN }}
+      - name: Commit and Push Docs 📦
+        run: |
+          git config --local user.name "GitHub Action"
+          git config --local user.email "action@github.com"
+          git add docs/*
+          git commit -m "Update documentation" || echo "No changes to commit"
+          git push origin main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
